fdo#62147: sw: ODF import: apply styles in cells with string-value

Apply the table-cell-style to paragraphs inside the table cell
for cells with value-type="string" and office:string-value attribute.
This should complete commit 1b5839f49c07beb6fbde6c7370a5636d22f9ab77.

Change-Id: Ief34de1e7c5087906ea597ce3ca96e020f6eebe6
(cherry picked from commit 84217e299724b8ee80dff63cb561b4bae0f44835)